@@ -20,8 +20,6 @@ import org.eclipse.edc.iam.did.spi.resolution.DidPublicKeyResolver;
 import org.eclipse.edc.iam.did.spi.resolution.DidResolverRegistry;
 import org.eclipse.edc.spi.result.Result;
 
-import java.util.stream.Collectors;
-
 import static org.eclipse.edc.iam.did.spi.document.DidConstants.ALLOWED_VERIFICATION_TYPES;
 
 public class DidPublicKeyResolverImpl implements DidPublicKeyResolver {
@@ -35,25 +33,22 @@ public class DidPublicKeyResolverImpl implements DidPublicKeyResolver {
     public Result<PublicKeyWrapper> resolvePublicKey(String didUrl) {
         var didResult = resolverRegistry.resolve(didUrl);
         if (didResult.failed()) {
-            return Result.failure("Invalid DID: " + String.join(", ", didResult.getFailureMessages()));
+            return Result.failure("Invalid DID: " + didResult.getFailureDetail());
         }
         var didDocument = didResult.getContent();
         if (didDocument.getVerificationMethod() == null || didDocument.getVerificationMethod().isEmpty()) {
             return Result.failure("DID does not contain a public key");
         }
 
-        var verificationMethods = didDocument.getVerificationMethod().stream().filter(vm -> ALLOWED_VERIFICATION_TYPES.contains(vm.getType())).collect(Collectors.toList());
+        var verificationMethods = didDocument.getVerificationMethod().stream()
+                .filter(vm -> ALLOWED_VERIFICATION_TYPES.contains(vm.getType()))
+                .toList();
         if (verificationMethods.size() > 1) {
             return Result.failure("DID contains more than one allowed verification type");
         }
 
         var verificationMethod = didDocument.getVerificationMethod().get(0);
-        var jwk = verificationMethod.getPublicKeyJwk();
-        try {
-            return Result.success(KeyConverter.toPublicKeyWrapper(jwk, verificationMethod.getId()));
-        } catch (IllegalArgumentException e) {
-            return Result.failure("Public key was not a valid EC key. Details: " + e.getMessage());
-        }
+        return KeyConverter.toPublicKeyWrapper(verificationMethod.getPublicKeyJwk(), verificationMethod.getId());
     }
 
 }
